Fixed spacing on homepage

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -263,4 +263,8 @@ body {
     z-index:10;
 }
 
+.googles {
+  margin-left: 1%;
+}
+
 
